@@ -9,6 +9,7 @@
 
     Multisite:
     * 3895 FIX: Fixed broken row selection for bulk actions
+    * 4037 FIX: Fix graphs that have optional metrics...
 
 
 1.4.0i1:
